# k8s-tpl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: config.yaml  deployment.yaml
src/: config.rs  main.rs
src/config/: error.rs  mod.rs
