[package]
name = "k8s-tpl"
version = "0.4.0"
description = "Templatisation for Kubernetes manifests"
repository = "https://github.com/connec/k8s-tpl/"
authors = ["Chris Connelly <chris@connec.co.uk>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
gtmpl = "^0.5.7"
structopt = "^0.3.14"
yaml-rust = "0.4.3"
